--- a/AO-Opdrachten/week 8/horeaca.css
+++ b/AO-Opdrachten/week 8/horeaca.css
@@ -7,7 +7,7 @@
 
 
 body {
-    background-image: url('assest/img/terras.jpg');
+    background-image: url('terras.jpg');
     background-repeat:  no-repeat;
     background-size: cover;
     
