--- a/AO-Opdrachten/week 8/assest/css/horeaca.css
+++ b/AO-Opdrachten/week 8/assest/css/horeaca.css
@@ -1,7 +1,22 @@
 .bestellen{
-    text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+    width: 250px;
 }
 
+
 body {
-    background-image: url("");
+    background-image: url('assest/img/terras.jpg');
+    background-repeat:  no-repeat;
+    background-size: cover;
+    
 }
+
+.titel {
+    border: 1px solid black;
+    background-color: white;
+    padding: 5px;
+  }
+
+  
