--- a/AO-Opdrachten/Blok 2/week 2/lingo.css
+++ b/AO-Opdrachten/Blok 2/week 2/lingo.css
@@ -3,7 +3,8 @@
 }
 
 body {
-  background:black;
+  background-image: url('bergen.jpg');
+  background-size: cover;
 }
 
 .invisible {
@@ -19,12 +20,11 @@ button {
   background: white;
   border: 1px solid black;
   padding: 10px 15px;
-  font-size: 20px;
+  font-size: 10px;
 }
 
 button:hover {
-  background-color: green;
-  color: white;
+  background-color: white;
 }
 
 #textboven {
@@ -49,7 +49,21 @@ button:hover {
   padding: 5px;
   margin: 10px auto;
   display: block;
+
   
+}
+
+#woord{
+  position: relative;
+  left: 600px;
+ 
+top:30px;
+}
+
+#Knop{
+  position: relative;
+  left: 600px;
+top:30px;
 }
 
 #container {
